# tdse

./: .gitignore  README.md  _CMakeLists.txt  exp.py  helper.py  interface.cpp  interface.h  main.cpp  make.ps1  make.sh  pyproject.toml  tdse.hpp  tempCodeRunnerFile.py  test.py  test10.py  test11.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py  util.hpp
src/: interface.cpp  interface.h  interface.hpp  main.cpp  tdse.hpp  util.hpp
tdse/: helper.py  test.py
