[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdse"
version = "0.1"
description = "..."
readme = "README.md"
authors = [{name = "Tang Wenqi", email = "tangwenqi02@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0"
]

[tool.setuptools]
packages = ["tdse"]
include-package-data = true

[tool.setuptools.package-data]
"tdse" = ["*.dll", "*.so"]